Fixed friends list scrollbar style

--- a/ClientApp/src/commons/styles/common.css
+++ b/ClientApp/src/commons/styles/common.css
@@ -40,6 +40,7 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
+  margin: 0;
 }
 
 .post-container {
