--- a/ClientApp/src/components/Sidebar/FriendsList/FriendsList.css
+++ b/ClientApp/src/components/Sidebar/FriendsList/FriendsList.css
@@ -3,21 +3,22 @@
   width: 100%;
   max-height: 400px;
   background-color: var(--bg-color);
-  display: inline-block;
 }
 
 .friends-list-scroll {
   max-height: 350px;
-  overflow-y: auto;
   overflow-y: overlay;
+  scrollbar-color: transparent transparent;
   -ms-overflow-style: none;
-  padding-left: 10px;
   direction: rtl;
-  scrollbar-width: none;
+  scrollbar-width: thin;
 }
 
 .friends-list-scroll:hover {
-  scrollbar-width: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+  overflow-y: auto;
+  overflow-y: overlay;
   -ms-overflow-style: auto;
 }
 
@@ -25,7 +26,7 @@
   direction: ltr;
 }
 
-.friends-list-scroll::-webkit-scrollbar {
+/* .friends-list-scroll::-webkit-scrollbar {
   width: 6px;
   position: absolute;
   right: auto;
@@ -41,10 +42,10 @@
 .friends-list-scroll::-webkit-scrollbar-thumb {
   border-radius: 3px;
   background-color: #888;
-  border-radius: 10px;
+  border-radius: 10px !important;
 }
 
 .friends-list-scroll::-webkit-scrollbar-track {
   -webkit-border-radius: 10px;
-  border-radius: 10px;
-}
+  border-radius: 10px !important;
+} */
